# proofmode-android

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  README.md  build.gradle  gp-code-of-conduct.md  gradle.properties  make-release-build  secrets.defaults.properties  settings.gradle
.tx/: config
android-libproofcam/: build.gradle.kts
android-libproofmode/: build.gradle  proguard-rules.pro
android-libproofmode/src/main/cpp/: CMakeLists.txt  native-lib.c
android-nostr/: build.gradle  proguard-rules.pro
android-nostr/src/main/: AndroidManifest.xml
android-opentimestamps/: build.gradle
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/libs/: readme.txt
c2pa/: build.gradle
camera/: build.gradle
docs/: cawg-support.md  filebase-integration.md  frida-hardening.md  index.md  verify.sh  web3-wallet-integration.md  web3-wallet-setup.md
es-MX/: descripcion_completa.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
java-opentimestamps/: build.gradle
proofmodeipfs/: build.gradle
samples/sample-proof-1/: IMG_20161213_152649.jpg.asc  IMG_20161213_152649.jpg.proof.csv  IMG_20161213_152649.jpg.proof.csv.asc  IMG_20161214_071949.jpg.asc  IMG_20161214_071949.jpg.proof.csv  IMG_20161214_071949.jpg.proof.csv.asc  IMG_20161214_072053.jpg.asc  IMG_20161214_072053.jpg.proof.csv  IMG_20161214_072053.jpg.proof.csv.asc  IMG_20161214_163821.jpg.asc  IMG_20161214_163821.jpg.proof.csv  IMG_20161214_163821.jpg.proof.csv.asc  IMG_20161214_165127.jpg.asc  IMG_20161214_165127.jpg.proof.csv  IMG_20161214_165127.jpg.proof.csv.asc
(+513 files in other folders)
